Closed Bug 31507 Opened 25 years ago Closed 25 years ago

using alt-scrollwheel causes segfault under linux

Categories

(Core :: XUL, defect, P3)

x86
Linux
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: ahu, Assigned: bryner)

Details

(Whiteboard: Have fix)

Attachments

(1 file)

Using alt-scrollwheel (to traverse history) always crashes mozilla. Stacktrace:

0x40887a69 in nsDocShell::ScrollByPages () from
/home/ahu/download/moz/package/libdocshell.so
(gdb) bt
#0  0x40887a69 in nsDocShell::ScrollByPages () from
/home/ahu/download/moz/package/libdocshell.so
#1  0x40b56130 in NSGetModule () from
/home/ahu/download/moz/package/components/libraptorhtml.so
#2  0x40b896d0 in NSGetModule () from
/home/ahu/download/moz/package/components/libraptorhtml.so
#3  0x40e62a34 in NSGetModule () from
/home/ahu/download/moz/package/components/libraptorview.so
#4  0x40e629e0 in NSGetModule () from
/home/ahu/download/moz/package/components/libraptorview.so
#5  0x40e629e0 in NSGetModule () from
/home/ahu/download/moz/package/components/libraptorview.so
#6  0x40e6fdca in NSGetModule () from
/home/ahu/download/moz/package/components/libraptorview.so
#7  0x40e6158d in NSGetModule () from
/home/ahu/download/moz/package/components/libraptorview.so
#8  0x4046e05a in nsWidget::DispatchEvent () from
/home/ahu/download/moz/package/libwidget_gtk.so
#9  0x4046df85 in nsWidget::DispatchWindowEvent () from
/home/ahu/download/moz/package/libwidget_gtk.so
#10 0x4046ebf7 in nsWidget::OnButtonPressSignal () from
/home/ahu/download/moz/package/libwidget_gtk.so
#11 0x4047248f in nsWindow::HandleGDKEvent () from
/home/ahu/download/moz/package/libwidget_gtk.so
#12 0x404646ea in handle_gdk_event () from
/home/ahu/download/moz/package/libwidget_gtk.so
#13 0x405cedf7 in gdk_wm_protocols_filter () from /usr/lib/libgdk-1.2.so.0
#14 0x405fe2d9 in g_get_current_time () from /usr/lib/libglib-1.2.so.0
#15 0x405fe8e3 in g_get_current_time () from /usr/lib/libglib-1.2.so.0
#16 0x405fea7c in g_main_run () from /usr/lib/libglib-1.2.so.0
#17 0x40521d97 in gtk_main () from /usr/lib/libgtk-1.2.so.0
#18 0x4045c5aa in nsAppShell::Run () from
/home/ahu/download/moz/package/libwidget_gtk.so
#19 0x403ff0e2 in inflate_mask () from
/home/ahu/download/moz/package/components/libnsappshell.so
#20 0x804af2c in JS_PushArguments ()
#21 0x804b24c in JS_PushArguments ()
#22 0x40225a42 in __libc_start_main () from /lib/libc.so.6
This on a more or less plain Debian 'Potato' system, btw, gtk-1.2.7, nightly
build from March 10th
assigning to pavlov, cc bryner (or should that really be the other way around?)
Assignee: trudelle → pavlov
I'm currently building mozilla to try and fix this, or at least give you people
some pointers as to what might be happening.
Sorry, I think I let this bitrot through some interface changes.  Fix attached,
will get reviewed and checked in.
Assignee: pavlov → bryner
Whiteboard: Have fix
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attached patch Proposed fixSplinter Review
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
transferring these to my netscape.com email.
Assignee: bryner → bryner
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: