Fix bug 31507, mousewheel history navigation causes segfault.  r=saari.